@@ -1,3 +1,7 @@
+Sat Jan 20 23:58:17 EST 2007
+
+	Fix obj_stack leak during coroutine switch.
+
 Tue Jul 25 22:26:26 EDT 2006
 
 	Add coroutines
